Store jwt in cookie for reuse
