# api/mod/src/app.py
@@ -5,7 +5,7 @@ This module defines the FastAPI application server
 from fastapi import FastAPI
 from starlette.middleware.cors import CORSMiddleware
 
-from mod.src.routers import debug, images, login, tasks, users
+from mod.src.routers import debug, images, login, tasks, users, ping
 
 from .settings import SETTINGS
 
@@ -22,6 +22,7 @@ APP.include_router(tasks.ROUTER)
 APP.include_router(images.ROUTER)
 APP.include_router(users.ROUTER)
 APP.include_router(login.ROUTER)
+APP.include_router(ping.ROUTER)
 
 if SETTINGS.debug_routes:
     APP.include_router(debug.ROUTER)
